# RAAG

./: .env.example  .gitignore  DEPLOYMENT.md  GPU_COMPATIBILITY.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  start.sh
docs/: dfd-rtm.md  sample-project-benchmark.json  sample-project-benchmark.md  software_architecture.md
frontend/: Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: Chatbot.js  Dashboard.js  ProjectForm.js
services/api-gateway/: Dockerfile  index.js  package.json
services/architecture-service/: Dockerfile  pom.xml
services/architecture-service/src/main/java/com/raag/architecture/: ArchitectureServiceApplication.java  LLMClient.java  WebClientConfig.java
services/architecture-service/src/main/resources/: application.yml
services/audit-service/: Cargo.toml  Dockerfile
services/audit-service/src/: main.rs
services/chatbot-service/: Dockerfile  index.js  package.json
services/export-service/: Dockerfile  main.py  requirements.txt
services/ingestion-service/: main.py  requirements.txt
services/llm-service/: main.py  requirements.txt
services/quality-service/: Dockerfile  go.mod  main.go
services/user-service/: Dockerfile  go.mod  main.go
